--- a/DevEnvExeMyLocation/DevEnvExeMyLocation/DevEnvExeMyLocation.Windows/DevEnvExeMyLocation.Windows.csproj
+++ b/DevEnvExeMyLocation/DevEnvExeMyLocation/DevEnvExeMyLocation.Windows/DevEnvExeMyLocation.Windows.csproj
@@ -5,7 +5,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CBA4CED8-8E72-4437-BD2F-05C3CF0B4821}</ProjectGuid>
+    <ProjectGuid>{090F063F-CEC3-4941-9FC3-447B3C826A14}</ProjectGuid>
     <OutputType>AppContainerExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DevEnvExeMyLocation.Windows</RootNamespace>
@@ -137,6 +137,12 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DevEnvExeMyLocation\DevEnvExeMyLocation.csproj">
+      <Project>{3c5c2c37-e144-4f36-8c21-eb83a8aa3fd8}</Project>
+      <Name>DevEnvExeMyLocation</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
     <Reference Include="Xamarin.Forms.Core, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Xamarin.Forms.2.3.3.193\lib\win81\Xamarin.Forms.Core.dll</HintPath>
       <Private>True</Private>
@@ -165,7 +171,6 @@
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
   </PropertyGroup>
-  <Import Project="..\DevEnvExeMyLocation\DevEnvExeMyLocation.projitems" Label="Shared" Condition="Exists('..\DevEnvExeMyLocation\DevEnvExeMyLocation.projitems')" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v$(VisualStudioVersion)\Microsoft.Windows.UI.Xaml.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Forms.2.3.3.193\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets" Condition="Exists('..\..\packages\Xamarin.Forms.2.3.3.193\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
