--- a/DevEnvExeMyLocation/DevEnvExeMyLocation/DevEnvExeMyLocation.Droid/Properties/AndroidManifest.xml
+++ b/DevEnvExeMyLocation/DevEnvExeMyLocation/DevEnvExeMyLocation.Droid/Properties/AndroidManifest.xml
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="15" />
-	<application android:label="DevEnvExeMyLocation.Droid"></application>
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
+	<application android:label="DevEnvExeMyLocation.Droid">
+		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyD9osiQdIKr6Wv9WHZqtW9ihRJkZUFgtRc" />
+	</application>
 </manifest>
