--- a/BotThumbnailCard/BotThumbnailCard/Web.config
+++ b/BotThumbnailCard/BotThumbnailCard/Web.config
@@ -6,9 +6,9 @@
 <configuration>
   <appSettings>
     <!-- update these with your BotId, Microsoft App Id and your Microsoft App Password-->
-    <add key="BotId" value="YourBotId" />
-    <add key="MicrosoftAppId" value="" />
-    <add key="MicrosoftAppPassword" value="" />
+    <add key="BotId" value="DevEnvExe" />
+    <add key="MicrosoftAppId" value="c3a49981-5b94-44d4-bd61-7f1ab6911c14" />
+    <add key="MicrosoftAppPassword" value="iKNAY1{-jnaihdCIL5457|@" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
