--- a/BotThumbnailCard/BotThumbnailCard/BotThumbnailCard.csproj
+++ b/BotThumbnailCard/BotThumbnailCard/BotThumbnailCard.csproj
@@ -113,7 +113,7 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\MessagesController.cs" />
-    <Compile Include="Dialogs\ThumbnailCardDialog.cs" />
+    <Compile Include="Dialogs\SuthaharDialog.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -123,6 +123,8 @@
     <Content Include="packages.config">
       <SubType>Designer</SubType>
     </Content>
+    <None Include="Properties\PublishProfiles\DevEnvBot - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\DevEnvExeBot - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
